Fix for close button being half visible

--- a/static/app.css
+++ b/static/app.css
@@ -5195,3 +5195,8 @@ span, button, input {
   font-size: 1.875rem;
   color: #fefefe;
   text-align: center; }
+
+.close-button {
+  color: #aaf0d1;
+  padding-right: 25px;
+  padding-top: 20px; }
