--- a/static/styles/views/_registration.scss
+++ b/static/styles/views/_registration.scss
@@ -125,3 +125,8 @@ $social-brand-tumblr: #32506d;
   text-align: center;
 }
 
+.close-button {
+  color: $primary-color;
+  padding-right: 25px;
+  padding-top:  20px;
+}
